--- a/docs/Settings.mdx
+++ b/docs/Settings.mdx
@@ -4,8 +4,8 @@ sidebar_position: 2
 
 <h3>Note: You do not need all settings to make it work, every setting attached has a default value!</h3>
 
-:::danger
-[**Legacy Settings**](/docs/Settings#legacy-settings-to-be-removed) are planning on being removed next update, please update your settings to the new ones!
+:::danger **FUTURE WARNING**
+[**Legacy Settings**](/docs/Settings#legacy-settings-to-be-removed) are planning on being removed next update, please update your settings to the new ones! When the update is released, the APIs **WILL** fail!
 :::
 
 Our first version of settings were... Well, clunky and messy to say the least. So, we've decided to make it a lot more simple and easier to understand. We've also added a lot more settings to make it more customizable to your needs. Every setting below or on the right are each their own table. You can look at the examples below to see how to use them. If you have any questions, feel free to join our Discord and ask in any of the general channels. We'll be happy to help you out!
@@ -40,16 +40,17 @@ Here's a simple table to help you understand the types:
 |      String       | `"Text"` OR `'Text'` OR `\`Text`\`  |
 |      Number       | `-2,147,483,647` TO `2,147,483,647` |
 |    Array | `{1, 2, 3}` OR `{"A", "B", "C"}` |
-| Array <br/> Example | <ul><li>String<whatYoureChanging\> -> "Example"</li><li>Array<String<Something\>\> -> `{"Something1", "Something2", "Something2"}`</li></ul> |
+| Array <br/> Example | <ul><li>String&lt;whatYoureChanging&gt; → "Example"</li><li>Array&lt;String&lt;Something&gt;&gt; → `{"Something1", "Something2", "Something2"}`</li></ul> |
 
 ## Commands
 | Setting Name | Type | Default Value | Description | Working? |
 |:---------:|:---------:|:---------:|:---------:|:---------:|
 | Enabled | Boolean | false | Enables/Disables chat commands. | ✔ |
+| useDefaultNames | Boolean | true | Determines whether default names should be included in the alias list. | ✔ |
 | Prefix | String | ! | The prefix for chat commands. | ✔ |
 | MinRank | Number | 255 | The minimum rank required to use chat commands. | ✔ |
 | MaxRank | Number | 255 | The maximum rank required to use chat commands. | ✔ |
-| Alias | Array<{String<commandName\>, String<commandAlias\>}\> | {} | The aliases for chat commands. | ✔ |
+| Alias | Array&lt;\{String&lt;commandName&gt;, String&lt;commandAlias&gt;\}&gt; | {} | The aliases for chat commands. | ✔ |
 
 ## ActivityTracker
 | Setting Name | Type | Default Value | Description | Working? |
@@ -75,7 +76,7 @@ Here's a simple table to help you understand the types:
 | Enabled | Boolean | false | Enables/Disables rank sticks. | ✔ |
 | MinRank | Number | 255 | The minimum rank required to use rank sticks. | ✔ |
 | MaxRank | Number | 255 | The maximum rank required to use rank sticks. | ✔ |
-| sticksModel | Model? | Model | The model/tool to use as the rank sticks. | ✔ |
+| sticksModel | Model | Tool? | The model/tool to use as the rank sticks. | ✔ |
 
 ## Notifications
 | Setting Name | Type | Default Value | Description | Working? |
@@ -87,6 +88,7 @@ Here's a simple table to help you understand the types:
 | Setting Name | Type | Default Value | Description | Working? |
 |:---------:|:---------:|:---------:|:---------:|:---------:|
 | originLoggerText | String | Game | The text used in the origin logger. | ✔ |
+| rankingCooldown | Number | 30 | Amount of seconds to wait between ranking the same person again. | ✔ |
 | ignoreWarnings | Boolean | false | Ignores warnings. | ✔ |
 | overrideGroupCheckForStudio | Boolean | false | Overrides the group check for studio. | ✔ |
 | isAsync | Boolean | false | Toggles whether upon initialization should yield the current thread or not. | ✔ |
@@ -95,18 +97,18 @@ Here's a simple table to help you understand the types:
 ## Legacy Settings (To Be Removed)
 These are settings that were available in a previous version, and are now removed. They still work, but you'll receive a warning to switch to the new settings.
 
-| Setting Name | Type | Default Value | Description | New Setting (Ignore, this is for spacing) |
-|:---------:|:---------:|:---------:|:---------:|:---------|
-| isChatCommandsEnabled | boolean | false | Determines whether in-game commands are enabled. | { <br/> &ensp;["Commands"] = { <br/> &emsp;["Enabled"] = false, <br/> &ensp;} <br/>} |
-| commandPrefix | string | ! | The prefix for commands. | { <br/> &ensp;["Commands"] = { <br/> &emsp;["Prefix"] = "!", <br/> &ensp;} <br/> } |
-| minRankToUseCommandsAndUI | number | 255 | The minimum rank required to use ranks and/or commands. | { <br/> &ensp;["Commands"] = { <br/> &emsp;["MinRank"] = 255, <br/> &ensp;} <br/> } |
-| maxRankToUseCommandsAndUI | number | 255 | The maximum rank required to use ranks and/or commands. | { <br/> &ensp;["Commands"] = { <br/> &emsp;["MaxRank"] = 255, <br/> &ensp;} <br/> } |
-| isUIEnabled | boolean | false | Determines whether client-sided user interface is enabled. | { <br/> &ensp;["Interface"] = { <br/> &emsp;["Enabled"] = false, <br/> &ensp;} <br/> } |
-| activityTrackingEnabled | boolean | false | Determines whether activity tracking is enabled. | { <br/> &ensp;["ActivityTracker"] = { <br/> &emsp;["Enabled"] = false, <br/> &ensp;} <br/> } |
-| disableActivityTrackingInStudio | boolean | true | Determines whether activity tracking should not send to our servers when play-testing in studio. | |
-| disableActivityTrackingWhenAFK | boolean | true | Determines whether activity tracking should stop when a player is detected as AFK. | |
-| rankToStartTrackingActivityFor | number | 255 | The minimum rank required to be tracked for activity. | |
-| delayBeforeMarkedAFK | number | 30 | The amount of seconds to allow a player to come back until they're marked as AFK. | |
-| nameOfGameForLogging | string | Game | When ranking logs occur, this name will be used for the "Origin" field. | |
-| overrideGroupCheckForStudio | boolean | true | Determines whether to override fetching group ranks when in studio. | |
-| ignoreWarnings | boolean | false | Determines whether to show warnings in the output. | |
+| Setting Name | Type | Default Value | Description |
+|:---------:|:---------:|:---------:|:---------:|
+| isChatCommandsEnabled | boolean | false | Determines whether in-game commands are enabled. |
+| commandPrefix | string | ! | The prefix for commands. |
+| minRankToUseCommandsAndUI | number | 255 | The minimum rank required to use ranks and/or commands. |
+| maxRankToUseCommandsAndUI | number | 255 | The maximum rank required to use ranks and/or commands. |
+| isUIEnabled | boolean | false | Determines whether client-sided user interface is enabled. |
+| activityTrackingEnabled | boolean | false | Determines whether activity tracking is enabled. |
+| disableActivityTrackingInStudio | boolean | true | Determines whether activity tracking should not send to our servers when play-testing in studio. |
+| disableActivityTrackingWhenAFK | boolean | true | Determines whether activity tracking should stop when a player is detected as AFK. |
+| rankToStartTrackingActivityFor | number | 255 | The minimum rank required to be tracked for activity. |
+| delayBeforeMarkedAFK | number | 30 | The amount of seconds to allow a player to come back until they're marked as AFK. |
+| nameOfGameForLogging | string | Game | When ranking logs occur, this name will be used for the "Origin" field. |
+| overrideGroupCheckForStudio | boolean | true | Determines whether to override fetching group ranks when in studio. |
+| ignoreWarnings | boolean | false | Determines whether to show warnings in the output. |
